# Speckitplus-Hackathon1

./: .dockerignore  .gitignore
.claude/: settings.local.json
Backend/: .env.example  Dockerfile  README.md  TESTING.md  agent_rag.py  api.py  chatbot.py  fix_collection.py  main.py  pyproject.toml  rate_limiter.py  start_server.py  test_context.txt  test_result.json
Backend/models/: agent_models.py
Backend/retrieval_validation/: README.md  __init__.py  answer_detector.py  evidence.py  exceptions.py  logger.py  models.py  quality.py  relevance.py  validator.py
Backend/tests/: __init__.py
Backend/tests/contract/: test_ask_endpoint.py
Backend/tests/fixtures/: sample_chunks.py
Backend/tests/integration/: test_agent_retrieval.py  test_answer_quality.py  test_hallucination_prevention.py  test_performance.py  test_retrieval_validation_integration.py
Backend/tests/unit/: test_agent_rag.py  test_selected_text_override.py
Backend/tests/unit/test_retrieval_validation/: __init__.py  test_answer_detector.py  test_evidence.py  test_quality.py  test_relevance.py
my-book/: docusaurus.config.ts  package-lock.json  sidebars.ts  tsconfig.json
my-book/docs/: intro.md
specs/001-book-rag-chatbot-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-physical-ai-book/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-content-embedding-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-retrieval-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  (+1 more)
(+104 files in other folders)
